force-app/main/default/objects/Company_Car_Request__c/Company_Car_Request__c.object-meta.xml
<CustomObject>
    <label>Company Car Request</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Company Car Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company Car Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>