force-app/main/default/objects/Company_Car_Request__c/fields/Actual_Car_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Actual_Car_Purchase_Price__c</fullName>
    <label>Actual Car Purchase Price</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>