force-app/main/default/objects/Company_Car_Request__c/fields/Actual_Planned_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Actual_Planned_Mileage__c</fullName>
    <inlineHelpText>Actual planned mileage of lease contract per year</inlineHelpText>
    <label>Actual Planned Mileage</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>