force-app/main/default/objects/Company_Car_Request__c/fields/Allowance_vs_Lease__c.field-meta.xml
<CustomField>
    <fullName>Allowance_vs_Lease__c</fullName>
    <label>Choose one</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Car Allowance</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>