force-app/main/default/objects/Company_Car_Request__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <inlineHelpText>Name of Business Unit</inlineHelpText>
    <label>Business Unit</label>
    <length>30</length>
    <type>Text</type>
</CustomField>