force-app/main/default/objects/Company_Car_Request__c/fields/C_B_International__c.field-meta.xml
<CustomField>
    <fullName>C_B_International__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C&amp;B International</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Company_Car_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>