force-app/main/default/objects/Company_Car_Request__c/fields/Car_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Car_Allowance__c</fullName>
    <inlineHelpText>A car allowance is allowed in case of a status car in all eligibility categories. In case of business cars, a car allowance is not allowed.</inlineHelpText>
    <label>Car Allowance</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Eligibility_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>