force-app/main/default/objects/Company_Car_Request__c/fields/Car_Brand__c.field-meta.xml
<CustomField>
    <fullName>Car_Brand__c</fullName>
    <label>Car Brand</label>
    <length>20</length>
    <type>Text</type>
</CustomField>