force-app/main/default/objects/Company_Car_Request__c/fields/Car_fleet_management__c.field-meta.xml
<CustomField>
    <fullName>Car_fleet_management__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if Car Fleet management has approved this car request</inlineHelpText>
    <label>Approved by Car Fleet Management</label>
    <type>Checkbox</type>
</CustomField>