force-app/main/default/objects/Company_Car_Request__c/fields/Car_Fleet_Manager__c.field-meta.xml
<CustomField>
    <fullName>Car_Fleet_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Car Fleet Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Company_Car_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>