force-app/main/default/objects/Company_Car_Request__c/fields/Car_Registration_No__c.field-meta.xml
<CustomField>
    <fullName>Car_Registration_No__c</fullName>
    <inlineHelpText>If available</inlineHelpText>
    <label>Car Registration No.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>