force-app/main/default/objects/Company_Car_Request__c/fields/Compensate_Excess_Price__c.field-meta.xml
<CustomField>
    <fullName>Compensate_Excess_Price__c</fullName>
    <inlineHelpText>If actual lease price exceeds max lease budget, will employee compensate Hill-Rom for excess lease price via a net payroll withholding?</inlineHelpText>
    <label>See help text</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>