force-app/main/default/objects/Company_Car_Request__c/fields/Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre__c</fullName>
    <label>Cost Centre</label>
    <length>8</length>
    <type>Text</type>
</CustomField>