force-app/main/default/objects/Company_Car_Request__c/fields/Direct_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Direct_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Direct Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Company_Car_Requests4</relationshipName>
    <type>Lookup</type>
</CustomField>