force-app/main/default/objects/Company_Car_Request__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <inlineHelpText>Effective date for car eligibility</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>