force-app/main/default/objects/Company_Car_Request__c/fields/Eligibility_Class__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Class__c</fullName>
    <label>Eligibility Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>