force-app/main/default/objects/Company_Car_Request__c/fields/Eligibility_Type__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Type__c</fullName>
    <label>Eligibility Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>