force-app/main/default/objects/Company_Car_Request__c/fields/Job_Grade__c.field-meta.xml
<CustomField>
    <fullName>Job_Grade__c</fullName>
    <label>Job Grade</label>
    <length>8</length>
    <type>Text</type>
</CustomField>