force-app/main/default/objects/Company_Car_Request__c/fields/Km_Miles__c.field-meta.xml
<CustomField>
    <fullName>Km_Miles__c</fullName>
    <label>Km/Miles</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Km</fullName>
            </value>
            <value>
                <fullName>Miles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>