force-app/main/default/objects/Company_Car_Request__c/fields/Lease_Quote__c.field-meta.xml
<CustomField>
    <fullName>Lease_Quote__c</fullName>
    <inlineHelpText>Actual Lease Quote should be based on standard mileage and standard contract duration</inlineHelpText>
    <label>Actual Lease Quote</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>