force-app/main/default/objects/Company_Car_Request__c/fields/Max_car_lease_budget__c.field-meta.xml
<CustomField>
    <fullName>Max_car_lease_budget__c</fullName>
    <inlineHelpText>Maximum Car lease budget per month, based on eligibility category</inlineHelpText>
    <label>Max car lease budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>