force-app/main/default/objects/Company_Car_Request__c/fields/Other_Car_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Car_Details__c</fullName>
    <label>Other Car Details</label>
    <type>TextArea</type>
</CustomField>