force-app/main/default/objects/Company_Car_Request__c/fields/Period_of_Lease_Contract__c.field-meta.xml
<CustomField>
    <fullName>Period_of_Lease_Contract__c</fullName>
    <inlineHelpText>Actual period of lease contract in months</inlineHelpText>
    <label>Actual Period of Lease Contract</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>