force-app/main/default/objects/Company_Car_Request__c/fields/Standard_Period_of_Lease_Contract__c.field-meta.xml
<CustomField>
    <fullName>Standard_Period_of_Lease_Contract__c</fullName>
    <inlineHelpText>Standard period of lease contract in months according to EU Car policy</inlineHelpText>
    <label>Standard Period of Lease Contract</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>