force-app/main/default/objects/Company_Car_Request__c/fields/Standard_planned_mileage__c.field-meta.xml
<CustomField>
    <fullName>Standard_planned_mileage__c</fullName>
    <inlineHelpText>Standard planned mileage of lease contract per year</inlineHelpText>
    <label>Standard planned mileage</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>