force-app/main/default/objects/Company_Car_Request__c/fields/Typical_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Typical_Purchase_Price__c</fullName>
    <inlineHelpText>Typical Purchase price, based on eligibility category (order within 80-120%)</inlineHelpText>
    <label>Typical Purchase Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>