force-app/main/default/objects/Company_Car_Request__c/fields/VP_HR_EU__c.field-meta.xml
<CustomField>
    <fullName>VP_HR_EU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VP HR</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>startsWith</operation>
            <value>VP HR</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Company_Car_Requests5</relationshipName>
    <type>Lookup</type>
</CustomField>