force-app/main/default/objects/Company_Car_Request__c/validationRules/Lease_Price_Exceeds_Budget.validationRule-meta.xml
<ValidationRule>
    <fullName>Lease_Price_Exceeds_Budget</fullName>
    <active>true</active>
    <description>If lease price exceeds lease budget, user must select if employee will compensate extra cost.</description>
    <errorConditionFormula>AND( Lease_Quote__c  &gt;  Max_car_lease_budget__c ,  ISPICKVAL( Compensate_Excess_Price__c , &quot;&quot;) )</errorConditionFormula>
    <errorDisplayField>Compensate_Excess_Price__c</errorDisplayField>
    <errorMessage>Please select a value</errorMessage>
</ValidationRule>